Modal Login Update fixed container size in modal causing issues with content wrap. added input in css and modified value of text and font size added interactivity to buttons. added hover abilities to buttons. made so linked content opens up in new tab.

--- a/pages/page-styles.css
+++ b/pages/page-styles.css
@@ -263,6 +263,12 @@ audio {
     margin-top: 8%;
     margin-inline: auto;
 }
+.fire-head{
+    font-family: 'Rajdhani', sans-serif;
+    font-size: 21pt;
+    letter-spacing: 3px;
+    color: rgb(135, 156, 239);
+}
 #fire{
     
 }
